Make Verify reporting during tests more compact for blocks

--- a/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
+++ b/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\XenoAtom.Allocators\XenoAtom.Allocators.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Verified\" />
+  </ItemGroup>
+
 </Project>
