Allow a token to be valid only when created by the allocator

--- a/src/XenoAtom.Allocators/XenoAtom.Allocators.csproj
+++ b/src/XenoAtom.Allocators/XenoAtom.Allocators.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
     <PackageReference Include="MinVer" Version="5.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
