--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
 *.sh text eol=lf
+
+
+*.verified.txt text eol=lf working-tree-encoding=UTF-8
