--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,11 @@ jobs:
     uses: xoofx/.github/.github/workflows/dotnet.yml@main
     secrets:
       NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
+
+- name: Upload Test Results
+  if: failure()
+  uses: actions/upload-artifact@v4
+  with:
+    name: verify-test-results
+    path: |
+      **/*.received.*
