--- a/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
+++ b/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MSTest" Version="3.*" />
+    <PackageReference Include="Verify.DiffPlex" Version="3.1.0" />
     <PackageReference Include="Verify.MSTest" Version="25.3.0" />
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
