--- a/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
+++ b/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MSTest" Version="3.*" />
-    <PackageReference Include="Verify.DiffPlex" Version="3.1.0" />
-    <PackageReference Include="Verify.MSTest" Version="25.3.0" />
+    <PackageReference Include="MSTest" />
+    <PackageReference Include="Verify.DiffPlex" />
+    <PackageReference Include="Verify.MSTest" />
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
