--- a/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
+++ b/src/XenoAtom.Allocators.Tests/XenoAtom.Allocators.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MarkdownSnippets.MsBuild" Version="27.0.2" PrivateAssets="all" />
     <PackageReference Include="MSTest" Version="3.*" />
     <PackageReference Include="Verify.DiffPlex" Version="3.1.0" />
     <PackageReference Include="Verify.MSTest" Version="25.3.0" />
